# hwp2md

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  PROGRESS.md  README.en.md  README.md
.github/ISSUE_TEMPLATE/: conversion-bug.yml
.github/workflows/: ci.yml  conversion-bug-validate.yml
.history/: 2026-04-22_hwp2md_phase3b_to_7_pm_iterations.md  2026-04-27_hwp2md_v050_sprint1_sprint2.md
.memory/episodes/: _recent.md
.memory/episodes/daily/: 2026-05-22.md  2026-05-26.md
.memory/episodes/threads/: hwp.md
.memory/references/: pub-crate-use-reexport-pattern.md
benches/: conversion.rs
examples/: convert.rs
src/: convert.rs  convert_tests.rs  convert_tests_builder.rs  convert_tests_count.rs  convert_tests_sanitize.rs  error.rs  hwp_reader.rs  hwpx_reader.rs  hwpx_writer.rs  ir.rs  lib.rs  main.rs  md_parser.rs  md_writer.rs  style.rs  url_util.rs
src/hwp/: control.rs  convert.rs  convert_tests.rs  convert_tests_build.rs  convert_tests_control.rs  convert_tests_detect.rs  convert_tests_ir.rs  convert_tests_list.rs  crypto.rs  eqedit.rs  eqedit_tests.rs  heading_style.rs  lenient.rs  mod.rs  model.rs  reader.rs  reader_tests.rs  record.rs  shapes.rs  summary.rs
src/hwp/control/: common.rs  dispatcher.rs  hyperlink.rs  image.rs  mod.rs  ruby.rs  table.rs
src/hwpx/: context.rs  handlers.rs  mod.rs  reader.rs  reader_tests.rs  reader_tests_basic.rs  reader_tests_binrefs.rs  reader_tests_break_setting.rs  reader_tests_charpr.rs  reader_tests_footnotes.rs  reader_tests_header_footer.rs  reader_tests_heading.rs  reader_tests_lenient.rs  reader_tests_list.rs  reader_tests_page_layout.rs  reader_tests_structure.rs  writer.rs  writer_content.rs  writer_header.rs  writer_section.rs  writer_tests.rs  writer_tests_charpr.rs  writer_tests_code_lang.rs  writer_tests_footnote.rs  writer_tests_golden.rs  writer_tests_header_footer.rs  writer_tests_hyperlink.rs  writer_tests_image.rs  writer_tests_image_util.rs  writer_tests_list.rs  writer_tests_list_adv.rs  writer_tests_metadata.rs  writer_tests_page_layout.rs  writer_tests_para_pr.rs  writer_tests_roundtrip.rs  writer_tests_ruby.rs  writer_tests_section.rs  writer_tests_section_adv.rs  writer_tests_table.rs
src/hwpx/context/: flush.rs  mod.rs  state.rs
src/md/: html_table.rs  mod.rs  parser.rs  parser_tests.rs  parser_tests_html_table.rs  parser_tests_inline.rs  parser_tests_marker.rs  writer.rs  writer_tests.rs  writer_tests_block.rs  writer_tests_edge.rs  writer_tests_frontmatter.rs  writer_tests_inline.rs  writer_tests_inline_adv.rs  writer_tests_para.rs  writer_tests_table_adv.rs  writer_tests_yaml.rs
tests/: cli.rs  cli_batch.rs  cli_general.rs  cli_style.rs  cli_to_hwpx.rs  cli_to_md.rs  hwpx_roundtrip.rs  hwpx_roundtrip_full.rs  hwpx_roundtrip_full2.rs  hwpx_roundtrip_stability.rs  hwpx_validation.rs  integration.rs  integration_blocks.rs  integration_footnote.rs  integration_formatting.rs  integration_hyperlink.rs  integration_image.rs  integration_list.rs  integration_table_blocks.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  real_fixtures_hwp.rs  real_hwp_list_accuracy.rs  roundtrip.rs  roundtrip_stability.rs
tests/common/: mod.rs
tests/fixtures/: mod.rs
tests/fixtures/real/: README.md  moel_01_goyang_center.hwp  moel_01_goyang_center.md  moel_02_vocational_training.hwp  moel_02_vocational_training.md  moel_03_livelihood_loan.hwp  moel_03_livelihood_loan.md  moel_04_instructor_education.hwp  moel_04_instructor_education.md  moel_05_quality_management.hwp  moel_05_quality_management.md
