[package]
name = "hwp2md"
version = "0.1.0"
edition = "2021"
authors = ["Mario Cho <hephaex@gmail.com>"]
description = "HWP/HWPX ↔ Markdown bidirectional converter"
license = "GPL-3.0-only"
repository = "https://github.com/hephaex/hwp2md"
keywords = ["hwp", "hwpx", "markdown", "converter", "hangul"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.75"

[[bin]]
name = "hwp2md"
path = "src/main.rs"

[lib]
name = "hwp2md"
path = "src/lib.rs"

[dependencies]
# HWP parsing
unhwp = "0.2"
hwpforge = "0.5"
hwpforge-smithy-md = "0.5"
hwpforge-smithy-hwpx = "0.5"
hwpforge-core = "0.5"
hwpforge-foundation = "0.5"

# Low-level format handling
cfb = "0.14"
flate2 = "1.0"
zip = { version = "2.0", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
encoding_rs = "0.8"
codepage = "0.1"
byteorder = "1.5"

# Markdown
comrak = "0.34"
pulldown-cmark = "0.12"

# CLI & utility
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
insta = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
