[package]
name = "hwp2md"
version = "0.2.0"
edition = "2021"
authors = ["Mario Cho <hephaex@gmail.com>"]
description = "HWP/HWPX ↔ Markdown bidirectional converter"
license = "GPL-3.0-only"
repository = "https://github.com/hephaex/hwp2md"
homepage = "https://github.com/hephaex/hwp2md"
documentation = "https://docs.rs/hwp2md"
readme = "README.md"
keywords = ["hwp", "hwpx", "markdown", "converter", "hangul"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.75"

[[bin]]
name = "hwp2md"
path = "src/main.rs"

[lib]
name = "hwp2md"
path = "src/lib.rs"

[dependencies]
# CFB/OLE2 container (HWP 5.0)
cfb = "0.14"

# Compression
flate2 = "1.0"

# ZIP container (HWPX)
zip = { version = "2.0", default-features = false, features = ["deflate"] }

# XML parsing (HWPX)
quick-xml = { version = "0.37", features = ["serialize"] }

byteorder = "1.5"

# Markdown
comrak = "0.34"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
